# Skypro_kyrsovaya_4

./: main.py  pyproject.toml
src/: hh_api.py  interaction.py  main.py  save_vacancies.py  vacancy.py
tests/: test_hh_api.py  test_interaction.py  test_save_vacancies.py  test_vacancy.py
